# FedFM

./: Dockerfile  Dockerfile.rpi  LICENSE  README.md  requirements-jetson.txt  requirements-rpi.txt  requirements-server.txt  smol-talk-web.py
detection/: pyproject.toml  run_all.sh
detection/dashboard/: demo_2.py
detection/evaluation/: eval.py
detection/experiments/ffa/: pyproject.toml
detection/experiments/ffa-rd10/: pyproject.toml
detection/experiments/ffa-rd100/: pyproject.toml
detection/experiments/ffa-rd100-cs0.2/: pyproject.toml
detection/experiments/ffa-rd100-cs0.4/: pyproject.toml
detection/experiments/ffa-rd100-cs0.6/: pyproject.toml
detection/experiments/ffa-rd150/: pyproject.toml
detection/experiments/ffa-rd20/: pyproject.toml
detection/experiments/ffa-rd200-cs0.2/: pyproject.toml
detection/experiments/ffa-rd200-cs0.4/: pyproject.toml
detection/experiments/ffa-rd200-cs0.6/: pyproject.toml
detection/experiments/ffa-rd30/: pyproject.toml
detection/experiments/ffa-rd300/: pyproject.toml
detection/experiments/ffa-rd50/: pyproject.toml
detection/experiments/ffa-rd80/: pyproject.toml
detection/experiments/ffa_dr/: pyproject.toml
detection/experiments/ffa_le1-dr/: pyproject.toml
detection/experiments/ffa_le2/: pyproject.toml
detection/experiments/ffa_le3/: pyproject.toml
detection/experiments/ffa_lr1e-4/: pyproject.toml
detection/experiments/ffa_lr5e-4/: pyproject.toml
detection/experiments/fft-rd100/: pyproject.toml
detection/experiments/lora_nbias/: pyproject.toml
detection/experiments/lora_svd/: pyproject.toml
detection/experiments/lora_zp/: pyproject.toml
detection/src/: client_app.py  dataset.py  hetero.py  models.py  server_app.py
fedfm/: README.md  pyproject.toml  run_all.sh
fedfm/dashboard/: chatbot_compare.py  monitor.py  ui.py
fedfm/experiments/ffa-normal/: pyproject.toml
fedfm/experiments/ffa-sqrt/: pyproject.toml
fedfm/experiments/ffa_dr/: pyproject.toml
fedfm/experiments/lora_nbias/: pyproject.toml
fedfm/experiments/lora_nbias-normal/: pyproject.toml
fedfm/experiments/lora_nbias-sqrt/: pyproject.toml
fedfm/experiments/lora_svd-sqrt/: pyproject.toml
fedfm/experiments/lora_svd_normal/: pyproject.toml
fedfm/experiments/lora_zp/: pyproject.toml
fedfm/experiments/lora_zp-sqrt/: pyproject.toml
fedfm/fedfm/: __init__.py  client_app.py  dataset.py  hetero.py  models.py  server_app.py  strategy.py  task.py  utils.py
instruction/: README.md  pyproject.toml
instruction/dashboard/: chatbot.py  demo_1.py  ip_monitor.py
instruction/experiments/ffa/: pyproject.toml
instruction/experiments/ffa_dr/: pyproject.toml
instruction/experiments/lora_nbias/: pyproject.toml
instruction/experiments/lora_svd/: pyproject.toml
instruction/experiments/lora_zp/: pyproject.toml
instruction/src/: __init__.py  models.py
results/ffa_dr_sqrt/peft_100/group_0/: adapter_config.json
results/ffa_dr_sqrt/peft_100/group_1/: adapter_config.json
results/ffa_dr_sqrt/peft_100/group_2/: adapter_config.json  adapter_model.safetensors
results/ffa_vanilla_sqrt/peft_100/group_0/: adapter_config.json
results/ffa_vanilla_sqrt/peft_100/group_1/: adapter_config.json
results/ffa_vanilla_sqrt/peft_100/group_2/: adapter_config.json  adapter_model.safetensors
