[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fedfm"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.19.0",
    "flwr-datasets>=0.5.0",
    "torch==2.6.0",
    "transformers>=4.50.0,<5.0",
    "evaluate>=0.4.0,<1.0",
    "datasets>=3.0.0",
    "scikit-learn>=1.6.1, <2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "fw407"

[tool.flwr.app.components]
serverapp = "fedfm.server_app:app"
clientapp = "fedfm.client_app:app"

[tool.flwr.app.config]
# FL
num-server-rounds       = 3
fraction-fit            = 1
local-epochs            = 1
learning-rate           = 1e-4
# Clents
min-available-clients   = 1
min-fit-clients         = 1
min-evaluate-clients    = 1
# Model & Datasets
model-name              = "prajjwal1/bert-tiny"
num-labels              = 2
dataset-name            = "stanfordnlp/imdb"
data-distribution       = "iid"
niid-alpha              = 1000
# PEFT
peft-name               = "fedit"
peft-rank               = 16
peft-inserted-modules   = "query,value"

[tool.flwr.federations]
default = "localhost-gpu"

[tool.flwr.federations.localhost]
options.num-supernodes = 1

[tool.flwr.federations.localhost-gpu]
options.num-supernodes = 1
options.backend.client-resources.num-cpus = 2 # each ClientApp assumes to use 4CPUs
options.backend.client-resources.num-gpus = 0.5 # at most 4 ClientApps will run in a given GPU

[tool.flwr.federations.local-deployment]
address = "127.0.0.1:9093"
insecure = true
